--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
   "name": "ops-api",
   "version": "1.0.0",
-  "main": "server.js",
-  "repository": "https://github.com/vsutariya-ontic/ops-api.git",
-  "author": "vsutariya-ontic <vsutariya@ontic.co>",
+  "main": "index.ts",
   "license": "MIT",
-  "scripts": {
-    "start": "nodemon src/server.js"
-  },
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20.12.7",
-    "nodemon": "^3.0.3",
+    "nodemon": "^3.1.0",
     "typescript": "^5.4.5"
+  },
+  "scripts": {
+    "build": "rm -rf dist && npx tsc",
+    "start": "node dist/index.js",
+    "watch": "tsc -w & nodemon dist/index.js"
   }
 }
